# tiny-llm

./: .clang-format  .cspell.json  .gitignore  .tool-versions  README.md  batch-main.py  batch_main.py  build-extension.py  build_ext.sh  check.py  main.py  main_ref_impl_week1.py  main_ref_impl_week2.py  pyproject.toml
.github/workflows/: main.yml  spell-check.yml
benches/: test_attention.py  test_quantized_matmul.py
book/: book.toml  sitemap.sh
book/src/: SUMMARY.md  copyright.md  glossary.md  preface.md  setup.md  sitemap.txt  sitemap.xml  week1-01-attention.md  week1-02-positional-embeddings.md  week1-02-positional-encodings.md  week1-03-gqa.md  week1-04-mlp-transformer.md  week1-04-rmsnorm-and-mlp.md  week1-05-model-1.md  week1-05-qwen2-model.md  week1-06-generate-response.md  week1-07-generate.md  week1-07-sampling-prepare.md  week1-overview.md  week2-01-kv-cache.md  week2-overview.md
rin_personal_notes/: transformers.md
scripts/: dev-tools.py  diff_api.py
src/extensions/: .clangd  CMakeLists.txt  bindings.cpp  build.py  test.py
src/extensions/src/: axpby.cpp  axpby.h  tiny_llm_ext.h  utils.cpp
src/extensions_ref/: .clangd  CMakeLists.txt  bindings.cpp  build.py  pyproject.toml  setup.py  test.py
src/extensions_ref/axpby/: axpby.cpp  axpby.h
src/extensions_ref/src/: flash_attention.cpp  flash_attention.metal  quantized_matmul.cpp  quantized_matmul.metal  tiny_llm_ext.h  utils.cpp
src/extensions_ref/tiny_llm_ext_ref/: __init__.py
src/mini_llm/: __init__.py  funcs.py  layers.py
src/tiny_llm/: __init__.py  attention.py  embedding.py  funcs.py  generate.py  kv_cache.py  layer_norm.py  layers.py  models.py  multi_head_attention.py  positional_encoding.py  quantize.py  qwen2.py  qwen2_week1.py  qwen2_week2.py  qwen3.py  sampler.py
src/tiny_llm_ref/: __init__.py  attention.py  batch.py  embedding.py  generate.py  kv_cache.py  layer_norm.py  models.py  positional_encoding.py  quantize.py  qwen2_week1.py  qwen2_week2.py  qwen3.py  sampler.py
src/tiny_llm_week1_ref/: attention.py  generate.py  multi_head_attention.py  positional_encoding.py  qwen2.py
src/tiny_llm_week2_ref/: __init__.py  attention.py  basics.py  embedding.py  generate.py  kv_cache.py  positional_encoding.py  quantize.py  qwen2.py
tests/: test_attention.py  test_basics.py  test_funcs.py  test_layer_norm.py  test_qwen2_mlp.py  test_rope.py  test_week_2_day_2.py  test_week_2_day_3.py  tiny_llm_base.py  utils.py
tests_ref_impl_week1/: test_basics.py  tiny_llm_base.py
tests_ref_impl_week2/: test_attention.py  test_layer_norm.py  test_week_2_day_2.py  test_week_2_day_3.py  tiny_llm_base.py
tests_refsol/: test_attention.py  test_basics.py  test_layer_norm.py  test_rope.py  test_week_1_day_1.py  test_week_1_day_2.py  test_week_1_day_3.py  test_week_1_day_4.py  test_week_1_day_5.py  test_week_1_day_6.py  test_week_1_day_7.py  test_week_2_day_1.py  test_week_2_day_2.py  test_week_2_day_3.py  test_week_2_day_6.py  tiny_llm_base.py
